# fortimanager-template-sync

./: .gitignore  .pre-commit-config.yaml  .relint.yml  404.html  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: deploy-docs.yml
developer_guide/: index.html
docs/: README.md  gen_ref_pages.py  index.md  requirements.txt
docs/developer_guide/: index.md  lab_setup.md
docs/github_guide/: github_actions.md  github_repository.md  github_workflow.md  index.md
docs/user_guide/: installation.md  lab_setup.md  quickstart.md  repository.md
example/repository/pre-run/: FG101F-init.j2
fortimanager_template_sync/: __init__.py  __main__.py  common_task.py  config.py  deploy_run.py  deploy_task.py  exceptions.py  main.py  misc.py  sync_run.py  sync_task.py  task.py
fortimanager_template_sync/fmg_api/: __init__.py  auth.py  connection.py  data.py  exceptions.py  settings.py
github_guide/: index.html
github_guide/github_actions/: index.html
github_guide/github_repository/: index.html
github_guide/github_workflow/: index.html
reference/SUMMARY/: index.html
reference/common_task/: index.html
reference/config/: index.html
reference/deploy_run/: index.html
reference/deploy_task/: index.html
reference/exceptions/: index.html
reference/fmg_api/__init__/: index.html
reference/fmg_api/connection/: index.html
reference/fmg_api/data/: index.html
reference/misc/: index.html
reference/sync_run/: index.html
reference/sync_task/: index.html
search/: search_index.json
tests/: conftest.py  test_fmg.py  test_fmg_api.py  test_full_run.py  test_git.py  test_helpers.py
user_guide/installation/: index.html
user_guide/lab_setup/: index.html
user_guide/quickstart/: index.html
user_guide/repository/: index.html
